dataset1235/2025-2/1153765216/users/1370515670/executions/2372395858_2249045874.log
== RUN (2025-08-28 18:52:25)
-- CODE: 
from math import *
a = math.pi
b = math.tan

lado = float(input("digite o numero"))
apotema = lado/2*b(a/8)

area = 4 * lado * apotema

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = math.pi
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = math.pi
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = math.pi
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = math.pi
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = math.pi
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = math.pi
        ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:52:26)
-- CODE: 
from math import *
a = math.pi
b = math.tan

lado = float(input("digite o numero"))
apotema = lado/2*b(a/8)

area = 4 * lado * apotema

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = math.pi
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = math.pi
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = math.pi
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = math.pi
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = math.pi
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = math.pi
        ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:52:24)
-- CODE: 
from math import *
a = math.pi
b = math.tan

lado = float(input("digite o numero"))
apotema = lado/2*b(a/8)

area = 4 * lado * apotema

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = math.pi
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = math.pi
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = math.pi
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = math.pi
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = math.pi
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = math.pi
        ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:08:49)
-- CODE: 
import math
a = math.pi
b = math.tan

lado = float(input("digite o numero"))
apotema = (lado) /(2 *b (a/8))

area = (4 * lado) * apotema


print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
---- user output:
digite o numero77.25
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
---- user output:
digite o numero309.02
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
---- user output:
digite o numero120.71
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
---- user output:
digite o numero120.71
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
---- user output:
digite o numero391.1
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
---- user output:
digite o numero173.82
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:50:39)
-- CODE: 
from math import *
a = math.pi
b = math.tan

lado = float(input("digite o numero"))

apotema = lado/2*b(a/8)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = math.pi
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = math.pi
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = math.pi
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = math.pi
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = math.pi
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = math.pi
        ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
